Improvements, Clean up Remove sh wrap from su (not working in JB). A simple su opens a shell DiskUsageGraph invalidate all canvas instead of rect